# doc-proofreader

./: .gitignore  LICENSE  README.md  pyproject.toml
doc_proofreader/: __init__.py  __main__.py  cli.py  proofread_document.py
doc_proofreader/prompts/: system_prompts.py  user_prompts.py
tests/: __init__.py  test_proofread_document.py
tests/resources/: test_doc.docx
